Finishing app - added views with angular, sorting of todos, less styles, ...

--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -12,10 +12,9 @@
   "homepage": "index.html",
   "private": true,
   "dependencies": {
-    "uikit": "https://github.com/uikit/uikit.git#^2.27.2",
-    "angular": "https://github.com/angular/bower-angular.git#^1.6.2",
+    "angular": "https://github.com/angular/bower-angular.git#^1.6.4",
     "less": "https://github.com/less/less.js.git#^2.7.2",
-    "less-flexbox": "https://github.com/jackrabbitsgroup/less-flexbox.git#^1.0.2",
-    "jquery-date-range-picker": "https://github.com/longbill/jquery-date-range-picker.git#^0.14.3"
+    "angular-route": "https://github.com/angular/bower-angular-route.git#^1.6.4",
+    "uikit": "https://github.com/uikit/uikit.git#3.0.0-beta.25"
   }
 }
