--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <org.springframework.version>4.3.2.RELEASE</org.springframework.version>
-        <com.fasterxml.jackson.version>2.7.3</com.fasterxml.jackson.version>
+        <com.fasterxml.jackson.version>2.8.5</com.fasterxml.jackson.version>
         <junit.version>4.12</junit.version>
         
     </properties>
@@ -68,6 +68,12 @@
             <version>${com.fasterxml.jackson.version}</version>
         </dependency>
         
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>${com.fasterxml.jackson.version}</version>
+        </dependency>
+        
          <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
@@ -85,8 +91,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                     <compilerArguments>
                         <endorseddirs>${endorsed.dir}</endorseddirs>
                     </compilerArguments>
