--- a/src/main/webapp/bower.json
+++ b/src/main/webapp/bower.json
@@ -15,7 +15,7 @@
     "angular": "https://github.com/angular/bower-angular.git#^1.6.4",
     "less": "https://github.com/less/less.js.git#^2.7.2",
     "angular-route": "https://github.com/angular/bower-angular-route.git#^1.6.4",
-    "uikit": "https://github.com/uikit/uikit.git#3.0.0-beta.25"
+    "uikit": "https://github.com/uikit/uikit.git#3.0.0-beta.25",
     "angularjs-datepicker": "https://github.com/720kb/angular-datepicker.git#^2.1.21"
   }
 }
